// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Building Buttons return active match buttons 1`] = `
Object {
  "components": Array [
    Object {
      "custom_id": "reportBlue",
      "disabled": false,
      "emoji": null,
      "label": "🔷 Blue Team Won 🔷",
      "style": 2,
      "type": 2,
      "url": null,
    },
    Object {
      "custom_id": "reportOrange",
      "disabled": false,
      "emoji": null,
      "label": "🔶 Orange Team Won 🔶",
      "style": 2,
      "type": 2,
      "url": null,
    },
  ],
  "type": 1,
}
`;

exports[`Building Buttons return break match buttons 1`] = `
Object {
  "components": Array [
    Object {
      "custom_id": "breakMatch",
      "disabled": false,
      "emoji": null,
      "label": "DEV: Break Match",
      "style": 4,
      "type": 2,
      "url": null,
    },
  ],
  "type": 1,
}
`;

exports[`Building Buttons return full queue buttons 1`] = `
Object {
  "components": Array [
    Object {
      "custom_id": "chooseTeam",
      "disabled": false,
      "emoji": null,
      "label": "Captains",
      "style": 1,
      "type": 2,
      "url": null,
    },
    Object {
      "custom_id": "randomizeTeams",
      "disabled": false,
      "emoji": null,
      "label": "Random",
      "style": 1,
      "type": 2,
      "url": null,
    },
    Object {
      "custom_id": "leaveQueue",
      "disabled": false,
      "emoji": null,
      "label": "Leave",
      "style": 4,
      "type": 2,
      "url": null,
    },
  ],
  "type": 1,
}
`;

exports[`Building Buttons return queue buttons 1`] = `
Object {
  "components": Array [
    Object {
      "custom_id": "joinQueue",
      "disabled": false,
      "emoji": null,
      "label": "Join",
      "style": 3,
      "type": 2,
      "url": null,
    },
    Object {
      "custom_id": "leaveQueue",
      "disabled": false,
      "emoji": null,
      "label": "Leave",
      "style": 4,
      "type": 2,
      "url": null,
    },
  ],
  "type": 1,
}
`;
